--- a/fileStorage/Web.config
+++ b/fileStorage/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="myDB"
-         connectionString="daddiez.cis440.com;
+         connectionString="SERVER=daddiez.cis440.com;
          PORT=3306;
          DATABASE=daddiez_files;
          UID=daddiez_admin;
