--- a/fileStorage/fileStorage.csproj
+++ b/fileStorage/fileStorage.csproj
@@ -92,13 +92,13 @@
     <Content Include="fileStorageServices.asmx" />
     <Content Include="Global.asax" />
     <Content Include="html\account.html" />
-    <Content Include="html\addClass.html" />
+    <Content Include="html\adminAddClass.html" />
     <Content Include="html\addClassStudent.html" />
     <Content Include="html\createAccount.html" />
     <Content Include="img\studying.jpg" />
     <Content Include="index.html" />
     <Content Include="js\account.js" />
-    <Content Include="js\addClass.js" />
+    <Content Include="js\adminAddClass.js" />
     <Content Include="js\classSearch.js" />
     <Content Include="js\index.js" />
     <Content Include="Web.config">
