--- a/fileStorage/fileStorage.csproj
+++ b/fileStorage/fileStorage.csproj
@@ -95,12 +95,14 @@
     <Content Include="html\adminAddClass.html" />
     <Content Include="html\addClassStudent.html" />
     <Content Include="html\createAccount.html" />
+    <Content Include="html\viewClasses.html" />
     <Content Include="img\studying.jpg" />
     <Content Include="index.html" />
     <Content Include="js\account.js" />
     <Content Include="js\adminAddClass.js" />
     <Content Include="js\classSearch.js" />
     <Content Include="js\index.js" />
+    <Content Include="js\viewClasses.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
