--- a/fileStorage/fileStorage.csproj
+++ b/fileStorage/fileStorage.csproj
@@ -93,6 +93,7 @@
     <Content Include="Global.asax" />
     <Content Include="html\account.html" />
     <Content Include="html\adminAddClass.html" />
+    <Content Include="html\viewRequests.html" />
     <Content Include="html\createAccount.html" />
     <Content Include="html\viewClasses.html" />
     <Content Include="img\studying.jpg" />
@@ -101,6 +102,7 @@
     <Content Include="js\adminAddClass.js" />
     <Content Include="js\classSearch.js" />
     <Content Include="js\index.js" />
+    <Content Include="js\retrieveRequests.js" />
     <Content Include="js\viewClasses.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
